bullet collision, player win and window border test added